[package]
name = "test-client"
version = "0.1.0"
edition = "2024"

[dependencies]
moonraker = { path = "../crates/moonraker" }
klipper = { path = "../crates/klipper" }

jsonrpsee = { workspace = true, features = ["ws-client"] }
tokio = { version = "1.43.0", features = ["io-std", "macros", "rt-multi-thread"] }
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = { version = "0.15.7" }
serde_json = { version = "1.0.139", features = ["raw_value"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
