[package]
name = "moonraker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
eserde = "0.1.6"
jsonrpsee = { workspace = true, features = [
    "client-core",
    "http-client",
    "macros",
    "ws-client",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
